fdo#55939 fix RTF export of footnotes

Regression from d4069372484f18b242a42a1996767f57b031fff6.

Change-Id: I58e8d48ac3222b795f7edfd0e74ecd86ea36f380